Fixed vertical alignment in .pages table row.

--- a/src/public/helpers/css/cubique.css
+++ b/src/public/helpers/css/cubique.css
@@ -51,6 +51,7 @@
     background: #fff;
     font-weight: normal;
     margin: 0px 3px;
+    margin-top: 1px;
     padding: 0px 8px;
     font-size: 12px;
 }
@@ -65,6 +66,7 @@
 .cubique .in-total {
     float: right;
     margin-right: 10px;
+    margin-top: 2px;
 }
 .cubique input {
     border: 1px solid #ccc;
